--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^5.2.0",
     "express": "^4.16.4",
     "socket.io": "^2.2.0",
+    "winston": "^3.3.3",
     "ws": "^6.1.2"
   }
 }
